day four end commit